--- a/clone/package.json
+++ b/clone/package.json
@@ -2,6 +2,7 @@
   "name": "clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/clone",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
@@ -32,7 +33,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
+  },      
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
