--- a/clone/package.json
+++ b/clone/package.json
@@ -2,7 +2,7 @@
   "name": "clone",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/clone",
+  "homepage": "/clone/",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
