--- a/clone/package.json
+++ b/clone/package.json
@@ -7,7 +7,8 @@
     "cra-template": "1.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.1",
+    "react-refresh": "^0.16.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -33,7 +34,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },      
+  },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
