--- a/clone/package.json
+++ b/clone/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^18.3.1",
     "react-refresh": "^0.16.0",
     "react-scripts": "^5.0.1",
+    "sass": "^1.83.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
