--- a/clone/package.json
+++ b/clone/package.json
@@ -9,6 +9,7 @@
     "react-refresh": "^0.16.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.83.1",
+    "swiper": "^11.2.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
